<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".LearnOrPractice"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_action"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button_learn"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/button_learn"
        android:layout_marginTop="16dp"
        android:onClick="learnClicked"/>

    <Button
        android:id="@+id/button_practice"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/button_practice"
        android:layout_marginTop="16dp"
        android:onClick="practiceClicked"/>

</LinearLayout>
